--- a/02-logo-html/assets/css/style.css
+++ b/02-logo-html/assets/css/style.css
@@ -28,4 +28,15 @@ body {
     position: absolute;
     opacity: 0.5;
     width: 550px;
+    z-index: 3;
+}
+
+.layout__logo {
+    z-index: 2;
+    position: absolute;
+    top: 123px;
+    width: 390px;
+    height: 443px;
+    background-color: #E54C21;
+    clip-path: polygon(0% 0%, 100% 0%, 90% 90%, 50% 100%,10% 90%);
 }
